# sme-stm32f407-4wcl

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  sme-stm32f407-4wcl Debug.launch  sme-stm32f407-4wcl.ioc
Application/Config/: config.h
Application/Config/Inc/: app_config.h  config.h
Application/Config/Src/: app_config.c
Application/Core/Inc/: error_codes.h  robot_state.h
Application/Core/Src/: robot_state.c
Application/MainLogic/Inc/: app_state_machine.h  control_board.h  error_codes.h
Application/MainLogic/Inc/States/: state_handlers.h
Application/MainLogic/Src/: app_state_machine.c  control_board.c
Application/MainLogic/Src/States/: state_active.c  state_auto.c  state_idle.c  state_init.c  state_manual.c
Application/MainLogic/Supervisor/Inc/: supervisor_fsm.h  supervisor_hw_joy_input.h
Application/MainLogic/Supervisor/Src/: supervisor_fsm.c  supervisor_hw_joy_input.c
Application/Modules/Buzzer/Inc/: io_buzzer.h
Application/Modules/Buzzer/Src/: io_buzzer.c
Application/Modules/CommandDispatcher/Inc/: command_dispatcher.h
Application/Modules/CommandDispatcher/Src/: command_dispatcher.c
Application/RTOSLogic/Inc/: app_rtos.h
Application/RTOSLogic/Src/: app_rtos.c  task_arm.c  task_controller.c  task_default.c  task_hw_input.c  task_imu.c  task_manager.c  task_mobility.c  task_sensors.c  task_serial_ros.c  task_telemetry.c  task_uart_listener.c  timer_heartbeat.c  timer_imu.c  timer_odometry.c  timer_system_sensors.c  timer_system_variables.c
Application/Tasks/Inc/: app_tasks.h
Application/Tasks/Src/: app_tasks.c  controller_task.c  manager_task.c  uart_listener_task.c
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c  usb_otg.c
Debug/: makefile  objects.list  sme-stm32f407-4wcl.elf  sme-stm32f407-4wcl.list  sme-stm32f407-4wcl.map
Debug/Core/Src/: freertos.cyclo  freertos.su  main.cyclo  main.su  subdir.mk
Scripts/Docklight/: ConsoleTXCommands.ptp
USB_HOST/App/: usb_host.c  usb_host.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: Machine States.xlsx  config_manager.md  heartbeat_mechanism.md  imu_system.md  io_mapping.md  motor_control.md  rtos_tasks.md  serial_ros.md  state_machine.md  usb_joystick_protocol.md  user_operation.md
docs/Hiwonder Board V1.2/: Pinout list.xlsx
test/: .cproject  .project
tools/serial-ros-web-client/: README.md  index.html  package-lock.json  package.json  relay.js  vite.config.js
tools/serial-ros-web-client/src/: App.jsx  index.css
(+98 files in other folders)
